Text to Voice# Please enter the commit message for your changes. Lines startin

--- a/text to speak.html
+++ b/text to speak.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Speech in JavaScript</title>
+    <title>Text Convert in to voice</title>
     <link rel="stylesheet" href="text to speak.css">
     <script src="script.js" type="module"></script>
 </head>
