--- a/e-commerce.html
+++ b/e-commerce.html
@@ -1,25 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="e-commerce.css"> <!-- Link to external CSS file -->
+    <title>Multigraphics Group</title>
+    <link rel="stylesheet" href="e-commerce.css">
 </head>
-
 <body>
-    <div class="main">
-        
-            <h3 class="Home" onclick="location.href='home.html'">Home</h3>
-            <h3 onclick="location.href='about.html '">About</h3>
-            <h3 onclick="location.href='skill.html '">skill</h3>
-            <h3 onclick="location.href='portfolio.html '">Portfolio</h3>
-            <h3 onclick="location.href='contact.html '">Contact</h3>
-            <h3 onclick="location.href='education.html '">Education</h3>
-       </div>
-    <p>Hello,It's Me</p>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="Screenshot 2024-08-29 181145.png" alt="Multigraphics Group Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Client</a></li>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    32
+                    <li><a href="#">Download Software</a></li>
+                </ul>
+            </nav>
+            <div class="contact">
+                <a href="#" target="_blank"><img src="facebook-app-symbol.png" alt="Facebook Icon"></a>
+                <a href="#" target="_blank"><img src="instagram.png" alt="Instagram Icon"></a>
+                <a href="#" target="_blank"><img src="twitter.png" alt="Twitter Icon"></a>
+                <a href="#" target="_blank"><img src="linkedin.png" alt="LinkedIn Icon"></a>
+                <a href="#" target="_blank"><img src="youtube.png" alt="YouTube Icon"></a>
+                <button>Get A Quote</button>
+            </div>
+        </div>
+    </header>
 
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Multigraphics Group</h1>
+                <h2>E-learning, Learning Management System</h2>
+                <h2>Online & OMR Based Exam Assessment Company</h2>
+                <button>Free Demo</button>
+            </div>
+            <video class="video" autoplay muted loop>
+                <source src="code.mp4">
+            </video>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, eaque ipsa! Recusandae nihil voluptates voluptatibus corrupti molestias dolores aspernatur architecto accusamus, consequatur, fugiat facere. Amet, aliquam. Molestias aperiam ipsam, assumenda voluptatibus dignissimos mollitia consequuntur eaque culpa, enim doloribus voluptate quam iure? A, ipsam?  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, eaque ipsa! Recusandae nihil voluptates voluptatibus corrupti molestias dolores aspernatur architecto accusamus, consequatur, fugiat facere. Amet, aliquam. Molestias aperiam ipsam, assumenda voluptatibus dignissimos mollitia consequuntur eaque culpa, enim doloribus voluptate quam iure? A, ipsam?</p>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="services-grid">
+                <div class="service">
+                    <img src="people.png" alt="Service 1">
+                    <h3>Active Clients</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, corporis.</p>
+                </div>
+                <div class="service">
+                    <img src="orchestra-director-with-stick.png" alt="Service 2">
+                    <h3>Users</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, corporis.</p>
+                </div>
+                <div class="service">
+                    <img src="goal.png" alt="Service 3">
+                    <h3>Years of Experience</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, corporis.</p>
+                </div>
+                <div class="Team">
+                    <img src="group.png" alt="Service 4">
+                    <h3>Dedicated Team</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, corporis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About Us</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, corporis.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Our Services</h3>
+                    <ul>
+                        <li><a href="#">Service 1</a></li>
+                        <li><a href="#">Service 2</a></li>
+                        <li><a href="#">Service 3</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li><a href="mailto:info@multigraphics.com">info@multigraphics.com</a></li>
+                        <li><a href="tel:+1234567890">+123 456 7890</a></li>
+                        <li><a href="#">Our Address</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+                    <ul class="social-icons">
+                        <li><a href="#" target="_blank"><img src="facebook-app-symbol.png" alt="Facebook Icon"></a></li>
+                        <li><a href="#" target="_blank"><img src="instagram.png" alt="Instagram Icon"></a></li>
+                        <li><a href="#" target="_blank"><img src="twitter.png" alt="Twitter Icon"></a></li>
+                        <li><a href="#" target="_blank"><img src="linkedin.png" alt="LinkedIn Icon"></a></li>
+                        <li><a href="#" target="_blank"><img src="youtube.png" alt="YouTube Icon"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Multigraphics Group. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="ecommerce.js"></script>
 </body>
-
 </html>
