--- a/slidebar.html
+++ b/slidebar.html
@@ -49,7 +49,7 @@
             <span class="icon">
               <ion-icon name="pencil"></ion-icon>
             </span>
-            <span class="text">Created By Nischal</span>
+            <span class="text">Created By pandey</span>
           </a></li>
       </ul>
     </div>
