--- a/glow text.html
+++ b/glow text.html
@@ -12,7 +12,7 @@
     <span></span>
     <span></span>
     <span></span> 
-     Nischal 100M 
+     Subscribe
     </a>
 
     <a href="#">
@@ -20,7 +20,7 @@
         <span></span>
         <span></span>
         <span></span> 
-        N-GamingX
+        LIke 
         </a>
     </a>
 </body>
